# ImageProcessingLab

./: .gitignore  CMakeLists.txt  README.md
src/: common.cpp  tpHistogram.cpp
